--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-logger": "^1.2.2",
     "koa-route": "^2.2.0",
     "swig": "^1.4.2",
-    "thunkify-wrap": "^1.0.4"
+    "thunkify-wrap": "^1.0.4",
+    "yo-api": "^1.0.0"
   }
 }
