--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "co": "^4.0.0",
     "co-body": "^1.0.0",
     "co-views": "^0.2.0",
-    "crunchbase": "^0.1.2",
+    "crunchbase2": "^0.1.4",
     "koa": "^0.13.0",
     "koa-bodyparser": "^1.2.0",
     "koa-logger": "^1.2.2",
