--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "co-body": "^1.0.0",
     "co-views": "^0.2.0",
     "crunchbase2": "^0.1.4",
+    "google-distance-matrix": "0.0.2",
     "koa": "^0.13.0",
     "koa-bodyparser": "^1.2.0",
     "koa-logger": "^1.2.2",
