--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Yofounders",
+  "name": "YOFOUNDERS",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "Andy Jiang",
   "main": "server.js",
   "repository": {
